# MRNN

./: .gitignore  README.md  data_loader.py  dims.txt  main_mrnn.py  model_utils.py  mrnn.py  pyproject.toml  utils.py
notebooks/: ts_analysis.ipynb
